# neural

./: CMakeLists.txt  Doxyfile.in  Layer.cpp  Layer.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h
doc/: Doxyfile
include/neural/: Activation.h  Layer.h  Network.h  Neuron.h
src/: Layer.cpp  Network.cpp  Neuron.cpp
